--- a/Webpage 2.html
+++ b/Webpage 2.html
@@ -9,6 +9,6 @@
         <a href="https://parikmehta.github.io/helpathome.github.io/Webpage-3.html">Help at Home</a>
     <a href="https://parikmehta.github.io/organization.github.io/Webpage-4.html">Organizations</a>
     </div>
-    <iframe src="Webpage-Wrting-1.html" frameborder="0" class="learn"></iframe>
+    <iframe src="https://parikmehta.github.io/frame1.github.io/Webpage-Wrting-1.html" frameborder="0" class="learn"></iframe>
 </body>
 </HTML>
